# multicode

./: .clang-format  .gitignore  AGENTS.md  AI_AGENTS_GUIDE.md  ANNOUNCEMENT.md  BLUEPRINT_EDITOR_BUTTONS_TEST.md  BUILD_STATUS.md  CMakeLists.txt  CODING_GUIDELINES.md  DEPENDENCIES.md  LICENSE  MSYS2_CHECKLIST.md  MSYS2_QUICK_SETUP.md  README.md  ROADMAP.md  Untitled-1.ini  Untitled_Graph.multicode.json  dep_check_math.hpp  dep_check_text.cpp  dep_check_text.hpp  multicode-debug.log.txt  renovate.json  test-debug.multicode  test-dropdown.md  test.cpp  test_2.cpp  test_3.cpp  test_3.hpp  test_complex_graph.json  test_graph.json  test_ue_graph.json  tmpclaude-5369-cwd  tsconfig.json  vcpkg.json
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  code-format.yml  cpp-build.yml  vscode-extension-ci.yml  vscode-extension.yml
.multicode/: graph-1771817389591.multicode  graph-1771846092850.multicode  graph-1772448508528.multicode  graph-file-test_2-2142558f.multicode  graph-file-test_3-21506d10.multicode
.multicode/classes/: class-138e29b0-e6e8-437d-b052-6b3ee0262322.multicode  class-5701fdd7-bf5d-4ed8-ae55-be8debe7d25a.multicode  class-test_3-mmaidj6o.multicode
include/visprog/core/: Connection.hpp  ErrorCodes.hpp  FormatCompat.hpp  Graph.hpp  GraphSerializer.hpp  ICodeGenerator.hpp  Node.hpp  NodeFactory.hpp  Port.hpp  Types.hpp
include/visprog/generators/: CppCodeGenerator.hpp
schemas/: multicode-package.schema.json  multicode-ue-package.schema.json  node.schema.json  package.schema.json  vcpkg.schema.json
scripts/: build-all.sh  build-cmake-utf8.ps1  check-docs.ps1  install-msys2.bat  install-msys2.ps1  monitor-errors.ps1  test-installation.ps1  vscode-test-i-sborka.sh
src/core/: Graph.cpp  GraphSerializer.cpp  Node.cpp  NodeFactory.cpp  Port.cpp  Types.cpp
src/generators/: CppCodeGenerator.cpp
tests/: debug_test.cpp  test_main.cpp
tests/core/: test_flow_control_nodes.cpp  test_graph.cpp  test_graph_serializer.cpp  test_node.cpp  test_port.cpp
tests/generators/: test_cpp_code_generator.cpp
tests/legacy/: CppCodeGenerator_legacy_stub.cpp
vscode-extension/: .eslintrc.json  .vscodeignore  CURSOR_INSTALLATION.md  DEBUGGING.md  README.md  VARIABLES.md  install-to-cursor.ps1  package-lock.json  package.json  test-extension.ps1  test-install.ps1  test-installation.ps1  tmpclaude-c035-cwd  tsconfig.json  verify-extension.ps1  vitest.config.ts  vitest.setup.ts  webpack.config.js  КАК_ПРОВЕРИТЬ_РАСШИРЕНИЕ.md
vscode-extension/.husky/: pre-commit
vscode-extension/media/icons/: README.md
vscode-extension/src/: extension.ts
vscode-extension/src/codegen/: CppCodeGenerator.test.ts  CppCodeGenerator.ts  UeCodeGenerator.test.ts  UeCodeGenerator.ts  externalSymbolResolver.test.ts  externalSymbolResolver.ts  factory.test.ts  factory.ts  index.test.ts  index.ts  languageSupport.test.ts  languageSupport.ts  pointerCodegen.ts  targetGolden.test.ts  types.ts  variablePipeline.test.ts
vscode-extension/src/commands/: createClassFilesAndBind.ts
vscode-extension/src/compilation/: CppCompiler.test.ts  CppCompiler.ts  ToolchainManager.test.ts  ToolchainManager.ts
vscode-extension/src/memory/: ProjectMemoryEngine.test.ts  ProjectMemoryEngine.ts  ProjectMemoryService.ts  commands.test.ts  commands.ts  corpus.test.ts  corpus.ts  index.ts  ranking.test.ts  ranking.ts  tokenizer.test.ts  tokenizer.ts  types.ts
vscode-extension/src/panel/: GraphPanel.ipc.test.ts  GraphPanel.ts  codeBinding.test.ts  codeBinding.ts  externalIncludePath.test.ts  externalIncludePath.ts  includeBlock.test.ts  includeBlock.ts  ipcOrchestration.ts  marianTranslator.test.ts  marianTranslator.ts  sourceGraphFallback.test.ts  sourceGraphFallback.ts
vscode-extension/src/shared/: blueprintTypes.test.ts  blueprintTypes.ts  bundledPackages.ts  classBinding.test.ts  classBinding.ts  classSidecar.test.ts  classSidecar.ts  codegen.test.ts  codegen.ts  dataTypeCategoryRegistry.ts  debugLogger.ts  externalSymbols.ts  graphBinding.test.ts  graphBinding.ts  graphSnapshot.test.ts  graphSnapshot.ts  graphState.ts  iconMap.ts  messages.test.ts  messages.ts  packageLoader.ts  packageSchema.ts  portTypeContract.ts  portTypeContractConsistency.test.ts  portTypes.test.ts  portTypes.ts  serializer.test.ts  serializer.ts  translations.ts  typeCompatibilityPolicy.ts  typeCompatibilityPolicyContext.test.ts  typeCompatibilityPolicyContext.ts  typeConversions.test.ts  typeConversions.ts  validator.test.ts  validator.ts  vectorValue.test.ts  vectorValue.ts
vscode-extension/src/test/: packageLoader.test.ts  packageMenus.test.ts  runTest.ts
vscode-extension/src/webview/: BlueprintEditor.tsx  ClassEditor.tsx  ClassPanel.tsx  CodePreviewPanel.tsx  ContextMenu.tsx  DependencyView.performance.test.tsx  DependencyView.test.tsx  DependencyView.tsx  DependencyViewPanel.tsx  EnhancedCodePreviewPanel.tsx  ErrorBoundary.tsx  FunctionEditor.tsx  FunctionListPanel.tsx  GraphEditor.tsx  HelpPanel.tsx  PackageManagerPanel.tsx  PointerReferencePanel.test.tsx  PointerReferencePanel.tsx  UeMacroBadgeList.tsx  UeMacroPanel.test.tsx  UeMacroPanel.tsx  VariableListPanel.test.tsx  blueprint.css  (+28 more)
vscode-extension/Архив/: test-extension.md
Документы/: BlueprintEditor_Buttons_Hotkeys.md  COMPILE_AND_RUN_FEATURE.md  CodeAudit.md  CriticalThinking.md  GrowthAreas.md  MSYS2_SETUP.md  POINTER_VARIABLE_BINDING.md  ProjectReview.md  ProjectStatus.md  README.md  UI_UX_IMPROVEMENT_PLAN.md  WebviewImprovementPlan.md
Документы/Архитектура/: AdvancedFeatures.md  CodeBinding.md  CppClassesInBlueprint.md  GraphSchemaMigrationUE.md  Multithreading.md  NodeSupportMatrix.md  PackageSystem.md  README.md  TargetMatrix.md  VisualEditor.md  Улучшения_десериализации_connections.md
Документы/Инфраструктура/: ENCODING_ISSUE.md  ERROR_MONITORING.md  LEGACY_TESTS_STATUS.md  README.md  UE_PRE_RELEASE_CHECKLIST.md
Документы/Предложения/: Blueprint_Подключаемые_библиотеки_и_палитра_символов.md  Улучшения_инструмента_Codex.md
Документы/Скриншоты/: blueprint-editor.md  classic-editor.md
Макет/: multi_code_wireframe_v_2.md
(+106 files in other folders)
